Fix spacing between submenu links

--- a/assets/src/scss/layout/_header-with-submenu.scss
+++ b/assets/src/scss/layout/_header-with-submenu.scss
@@ -191,7 +191,7 @@
 
       .menu {
         align-items: center;
-        column-gap: 0.5em;
+        column-gap: 0.25em;
         flex-direction: row;
         justify-content: initial;
       }
